@@ -1,5 +1,7 @@
 *SVN*
 
+* Move test fixtures out of the test application root directory
+
 *0.0.1* (August 21st, 2007)
 
 * Added documentation
